--- a/src/test/resources/config.yml
+++ b/src/test/resources/config.yml
@@ -1,5 +1,9 @@
+MultiConnectUsers:
+  - SampleUser1
+  - SampleUser2
 LanMode: false
-MultiConnectPlayers:
- - SampleUser1
- - SampleUser2
+LanUsersNames:
+  127.0.0.1: PapaMiner
+  12.118.1.15: MamaMiner
+  12.118.10.114: LittleMiner
 SecretSalt: i3XACXrpc96HSbCtI8Szh8p1IHM=
